objects/MaritzCX__Survey__c.object
<CustomObject>
    <fields>
        <fullName>MaritzCX__ALG_Survey_Id__c</fullName>
        <externalId>true</externalId>
        <label>ALG Survey Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaritzCX__Allegiance_Survey_Response_View_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaritzCX Survey Response View Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Is_Default_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM10_Max__c</fullName>
        <label>Key Metric 10- Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM10_Min__c</fullName>
        <label>Key Metric 10- Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM11_Max__c</fullName>
        <label>Key Metric 11- Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM11_Min__c</fullName>
        <label>Key Metric 11- Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM12_Max__c</fullName>
        <label>Key Metric 12- Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM12_Min__c</fullName>
        <label>Key Metric 12- Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM1_Goal__c</fullName>
        <label>Key Metric 01- Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM2_Goal__c</fullName>
        <label>Key Metric 02- Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__KM3_Goal__c</fullName>
        <label>Key Metric 03- Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_10_Chart__c</fullName>
        <label>Key Metric 10 Chart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_11_Chart__c</fullName>
        <label>Key Metric 11 Chart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Key_Metric_12_Chart__c</fullName>
        <label>Key Metric 12 Chart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaritzCX__MCX_Company_Id__c</fullName>
        <label>MCX Company Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaritzCX__Time_Trend__c</fullName>
        <label>Time Trend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>MaritzCX__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>